--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,19 @@
 <body>
     <div align="center">
         <h1>User List</h1>
-        <a href="/new"> Add New User</a>
+
+        <div sec:authorize="isAuthenticated()">
+            Welcome <b><span sec:authentication="name">Username</span></b>&nbsp;
+            <i><span sec:authentication="principal.authorities">Roles</span></i>
+        </div>
+
+        <form th:action="@{/logout}" method="post">
+            <input type="submit" value="Logout"/>
+        </form>
+
+        <div sec:authorize="hasAnyAuthority('ADMIN')">
+            <a href="/new"> Add New Student</a>
+        </div>
         <br>
         <table border="1" cellpadding="10"> 
             <thead>
@@ -16,7 +28,7 @@
                     <th>Name</th>
                     <th>Phone Number</th>
                     <th>E-mail</th>
-                    <th>Action</th>
+                    <th sec:authorize="hasAnyAuthority('ADMIN')" >Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -26,9 +38,14 @@
 					<td th:text="${user.phoneNumber}">User Phone Number</td>
 					<td th:text="${user.email}">User E-mail</td> 
                     <td>
-                        <a th:href="@{'/edit/' + ${user.uid}}">Edit</a>
+                        <div sec:authorize="hasAnyAuthority('USER','ADMIN')">
+                            <a th:href="@{'/edit/' + ${user.uid}}">Edit</a>
+                        </div>                        
                         &nbsp;&nbsp;&nbsp;
-                        <a th:href="@{'/delete/' + ${user.uid}}">Delete</a>
+                        <div sec:authorize="hasAnyAuthority('ADMIN')">
+                            <a th:href="@{'/delete/' + ${user.uid}}">Delete</a>
+                        </div>
+                        
                     </td>                                      
                 </tr>
             </tbody>
